# PLANTOR

./: .gitignore  .gitmodules  Dockerfile.backend  Dockerfile.frontend  README.md  README2.md  README3.md  docker-compose.yaml  requirements.txt  ui_multi_steps copy.py  ui_multi_steps.py
LLM/: LLM.py  LLM2.py  local_model.py  local_qwen.py  requirements.txt
LLM/conf/: deepseek-r1-7b.yaml  gemma3.yaml  gpt4o-fine-tuned.yaml  gpt4o-mini-fine-tuned.yaml  llama2.yaml  llama3.2.yaml  local-codegemma-7B_qlora.yaml  local-gemma3-0.3B.yaml  local-gemma3-0.3B_qlora.yaml  local-qlora-qwen-0.5B.yaml  local-qwen-0.5B.yaml  local-qwen3-8B_qlora.yaml  qwen2.5.yaml
LLM/model_training/: model_fine_tuning_complete.py  model_fine_tuning_qlora.py
behaviour_tree/src/bt/: CMakeLists.txt  package.xml
behaviour_tree/src/bt/include/: move_arm_requester.hpp  move_gripper_requester.hpp  service_requester.hpp  sleep_node.hpp
behaviour_tree/src/bt/src/: main.cpp  move_arm_requester.cpp  move_gripper_requester.cpp  service_requester.cpp  sleep_node.cpp
evaluation/: output_evaluation.py
exps_sub/: README.md
exps_sub/Plan/: results_prolog.csv  results_python.csv
llm_ll_gen/: llm_ll.py
llm_ui/: README.md  docker-compose.yaml
llm_ui/backend/: Dockerfile  run.py
llm_ui/frontend/: Dockerfile  README.md  package.json
prolog_planner/: execute.sh  full_planner_interleaved.pl  full_planner_separated.pl  includes.pl  includes_original.pl  planner.pl
prolog_planner/utility/: actions.pl  conditions.pl  resources.pl
python_interface/: planner.py  planner_test.py  requirements.txt  results1.csv  results2.csv  results_prolog.csv  results_prolog2.csv
python_interface/BT/: BT.py
python_interface/MILP/: MILP.py
python_interface/Prolog/: __init__.py  prolog.py
trainer_output/: README.md
(+501 files in other folders)
